# cmus_cli_python_app_player_ghagent

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  PROJECT_LOG.md  QUICKSTART.md  README.md  agents.md  demo_ui.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
config/: default.toml
plugins/: example_plugin.py
screenshots/: README.md
src/cmus_rich/: __init__.py  __main__.py  cli.py
src/cmus_rich/core/: __init__.py  app.py  cmus_interface.py  config.py  events.py  state.py
src/cmus_rich/features/: __init__.py  library.py  playback.py  queue.py  search.py
src/cmus_rich/plugins/: api.py  manager.py
src/cmus_rich/ui/: dashboard.py
src/cmus_rich/utils/: cache.py  db.py
tests/: test_core.py
